--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
                     <form action="#" class="base-form">
                         <!-- Hidden Required Fields -->
                         <input type="hidden" name="project_name" value="Shoes Concept">
-                        <input type="hidden" name="admin_email" value="choesconcept1@gmail.com">
+                        <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
                         <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
                         <!-- END Hidden Required Fields -->
                         <input required class="name" type="text" name="name" placeholder="Ваше имя">
@@ -533,24 +533,24 @@
                             <div class="row">
                                 <div class="col-md-12  mb-20 photo--big">
                                     <a href="img/gallery/photo.jpg">
-                                        <img src="img/photo-2018-04-05-12-03-00.jpg" alt="">
+                                        <img src="img/product-10-2.JPG" alt="">
                                     </a>
                                 </div>
                             </div>    
                             <div class="row mb-20">
                                 <div class="col-6 col-md-6">
-                                    <a href="img/gallery/photo.jpg"><img src="img/photo-2018-04-05-12-03-00.jpg" alt=""></a>
+                                    <a href="img/gallery/photo.jpg"><img src="img/product-10-7.jpg" alt=""></a>
                                 </div>
                                 <div class="col-6 col-md-6 ">
-                                    <a href="img/gallery/photo.jpg"><img src="img/photo-2018-04-05-12-03-00.jpg" alt=""></a>
+                                    <a href="img/gallery/photo.jpg"><img src="img/product-10-10.JPG" alt=""></a>
                                 </div>
                             </div>
                             <div class="row mb-20">
                                 <div class="col-6 col-md-6">
-                                    <a href="img/gallery/photo.jpg"><img src="img/photo-2018-04-05-12-03-00.jpg" alt=""></a>
+                                    <a href="img/gallery/photo.jpg"><img src="img/product-10-4.JPG" alt=""></a>
                                 </div>
                                 <div class="col-6 col-md-6">
-                                    <a href="img/gallery/photo.jpg"><img src="img/photo-2018-04-05-12-03-00.jpg" alt=""></a>
+                                    <a href="img/gallery/photo.jpg"><img src="img/product-10-3.jpg" alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -559,24 +559,24 @@
                         <div class="col-md-12 p-0 mb-20">    
                             <div class="row mb-20">
                                 <div class="col-6 col-md-6">
-                                    <a href="img/gallery/photo.jpg"><img src="img/photo-2018-04-05-12-03-00.jpg" alt=""></a>
+                                    <a href="img/gallery/photo.jpg"><img src="img/product-10-9.JPG" alt=""></a>
                                 </div>
                                 <div class="col-6 col-md-6 ">
-                                    <a href="img/gallery/photo.jpg"><img src="img/photo-2018-04-05-12-03-00.jpg" alt=""></a>
+                                    <a href="img/gallery/photo.jpg"><img src="img/product-10-5.JPG" alt=""></a>
                                 </div>
                             </div>
                             <div class="row mb-20">
                                 <div class="col-6 col-md-6">
-                                    <a href="img/gallery/photo.jpg"><img src="img/photo-2018-04-05-12-03-00.jpg" alt=""></a>
+                                    <a href="img/gallery/photo.jpg"><img src="img/product-10-1.jpg" alt=""></a>
                                 </div>
                                 <div class="col-6 col-md-6">
-                                    <a href="img/gallery/photo.jpg"><img src="img/photo-2018-04-05-12-03-00.jpg" alt=""></a>
+                                    <a href="img/gallery/photo.jpg"><img src="img/product-10-6.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12 col-md-12  mb-20 photo--big">
                                     <a href="img/gallery/photo.jpg">
-                                        <img src="img/photo-2018-04-05-12-03-00.jpg" alt="">
+                                        <img src="img/product-10-8.JPG" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -604,7 +604,7 @@
                             <form action="#" class="base-form">
                                 <!-- Hidden Required Fields -->
                                 <input type="hidden" name="project_name" value="Shoes Concept">
-                                <input type="hidden" name="admin_email" value="choesconcept1@gmail.com">
+                                <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
                                 <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
                                 <!-- END Hidden Required Fields -->
                                 <input required class="name" type="text" name="Name" placeholder="Ваше имя">
@@ -635,13 +635,15 @@
             <div class="flex-grid">
                 <a href="index.html" class="logo"><img src="img/logo-footer.png" alt="Shoes concept"></a>
                 <div class="company-description">Продажа кожанной обуви от производителя</div>
-                <ul class="social">
-                    <li><a target="_blank" href="https://www.facebook.com/pg/%D0%9C%D0%B0%D0%B3%D0%B0%D0%B7%D0%B8%D0%BD-Shoes-Concept-%D0%BA%D0%BE%D0%B6%D0%B0%D0%BD%D0%B0%D1%8F-%D0%BE%D0%B1%D1%83%D0%B2%D1%8C-%D0%A5%D0%B0%D1%80%D1%8C%D0%BA%D0%BE%D0%B2-1461896510604274/shop/?ref=page_internal"></a></li>
-                    <li><a target="_blank" href="https://www.instagram.com/shoesconcept/"></a></li>
-                </ul>
-                <div class="phones">
-                    <a href="tel:+38 (095) 851-80-15">+38 (066) 856-61-37</a>
-                    <a href="tel:+38 (095) 851-80-15">+38 (068) 613-02-29</a>
+                <div class="flex-grid-item">
+                    <ul class="social">
+                        <li><a target="_blank" href="https://www.facebook.com/pg/%D0%9C%D0%B0%D0%B3%D0%B0%D0%B7%D0%B8%D0%BD-Shoes-Concept-%D0%BA%D0%BE%D0%B6%D0%B0%D0%BD%D0%B0%D1%8F-%D0%BE%D0%B1%D1%83%D0%B2%D1%8C-%D0%A5%D0%B0%D1%80%D1%8C%D0%BA%D0%BE%D0%B2-1461896510604274/shop/?ref=page_internal"></a></li>
+                        <li><a target="_blank" href="https://www.instagram.com/shoesconcept/"></a></li>
+                    </ul>
+                    <div class="phones">
+                        <a href="tel:+38 (095) 851-80-15">+38 (066) 856-61-37</a>
+                        <a href="tel:+38 (095) 851-80-15">+38 (068) 613-02-29</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -652,7 +654,7 @@
             <div class="base-title"><span><i>Отправить заявку</i></span></div>
             <!-- Hidden Required Fields -->
             <input type="hidden" name="project_name" value="Shoes Concept">
-            <input type="hidden" name="admin_email" value="choesconcept1@gmail.com">
+            <input type="hidden" name="admin_email" value="korobeynik77@gmail.com">
             <input type="hidden" name="form_subject" value="Заявка с сайта Shoes Concept">
             <!-- END Hidden Required Fields -->
             <input required class="name" type="text" name="Name" placeholder="Ваше имя">
